--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "coveralls": "3.0.1",
     "eslint": "5.0.0",
-    "mocha": "5.2.0",
+    "mocha": "^5.2.0",
     "nyc": "12.0.2",
     "unit.js": "~2.0.0"
   }
